# experiment-audit-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  real_results.json
.github/workflows/: ci.yml
dev/experiment-audit-plugin/: .mcp.json
dev/experiment-audit-plugin/.claude-plugin/: marketplace.json  plugin.json
dev/experiment-audit-plugin/skills/experiment-audit/: SKILL.md  examples.md  prompts.md  reference.md
docs/: PROOF_CASE.md  audit-methods.md  design-spec-v1.md  implementation-roadmap-v1.md  launch-post.md  tool-selection-eval.md  wandb_fixture_plan.md
examples/: diagnose_list_runs_gap.py  log_real_sweep.py  log_to_real_wandb.py  run_audit.py  run_experiment.py  run_pipeline.py
research/: research-progress.md
research/02_literature/: bibliography.md  related-work.md
research/03_workflows/: pain-points.md  researcher-workflows.md  workflow-ranking.md
research/04_benchmarks/: benchmark-plan.md
research/07_reasoning_engine/: confidence-system.md  evidence-model.md  knowledge-memory.md  reasoning-engine.md  reasoning-rules.md  roadmap.md  scientific-reviewer.md
research/08_ml_scientific_reasoning_standard/: 00_philosophy.md  01_evidence.md  02_claims.md  07_confidence.md  08_contradictions.md
research/09_scientific_rule_engine/: specification.md
scripts/: record_wandb_fixtures.py  tool_selection_eval.py  tool_selection_prompts.py
scripts/benchmarks/: bench_reasoning_rules.py  gen_bench_data.py
src/experiment_audit/: __init__.py  auth.py  cli.py  errors.py  models.py  server.py
src/experiment_audit/analysis/: comparison.py  confound.py  divergence.py  sensitivity.py
src/experiment_audit/backends/: base.py  fake_backend.py  wandb_backend.py
src/experiment_audit/reasoning/: __init__.py  claims.py  confidence.py  contradictions.py  engine.py  evidence.py  hypotheses.py  judgment.py  observations.py  pipeline.py  recommendation.py  rules.py  scientific_report.py
src/experiment_audit/reasoning/scientific_rules/: __init__.py  confidence_rule.py  contradiction_rule.py  judgment_rule.py  missing_evidence_rule.py  recommendation_rule.py  scope_rule.py
src/experiment_audit_mcp/: __init__.py  errors.py  models.py  server.py
src/experiment_audit_mcp/analysis/: comparison.py  confound.py  divergence.py  sensitivity.py
src/experiment_audit_mcp/backends/: base.py  fake_backend.py  wandb_backend.py
src/experiment_audit_mcp/reasoning/: claims.py  confidence.py  contradictions.py  engine.py  evidence.py  hypotheses.py  judgment.py  observations.py  pipeline.py  recommendation.py  rules.py  scientific_report.py
src/experiment_audit_mcp/reasoning/scientific_rules/: confidence_rule.py  contradiction_rule.py  (+4 more)
tests/: test_adversarial_mcp_layer.py  test_audit_10_hardening.py  test_audit_9_security_hardening.py  test_backend_base.py  test_comparison.py  test_confound.py  test_divergence.py  test_documentation_audit_7.py  test_fake_backend.py  test_mcp_audit_fixes.py  test_models.py  test_package_imports.py  test_packaging.py  test_release_metadata.py  test_sensitivity.py  test_server.py  test_server_argument_validation.py  test_tool_selection_prompts.py  test_wandb_backend.py  test_wandb_backend_fixtures.py
tests/fixtures/: README.md  adversarial_cases.py
tests/reasoning/: test_build_initial_context_regression.py  test_claims_contradictions_serialization_regression.py  test_contradiction_rule.py  test_engine_confidence_wiring_regression.py  test_pipeline_serialization_regression.py  test_reasoning_rules_scalability_regression.py  test_scientific_report_regression.py
tests/validation/: __init__.py  builders.py  test_confidence_rule_validation.py  test_contradiction_rule_validation.py  test_judgment_rule_validation.py  test_missing_evidence_rule_validation.py  test_pipeline_validation.py  test_recommendation_rule_validation.py  test_scope_rule_validation.py
validation/: annotation-guidelines.md  capability-matrix.md  datasets.md  validation-plan.md
validation/experiments/: generate_wandb_testbed.py
validation/results/: AUDIT_SWEEP.md  AUDIT_TRAINING_CURVE.md  RC1_VALIDATION_SUMMARY.md  V1_1_ROADMAP.md
(+4 files in other folders)
