[project]
name = "experiment-audit-mcp"
version = "1.0.0"
description = "MCP server for auditing ML experiments (W&B): confounded ablations, training-curve pathologies, and misleading sweep conclusions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sree Dharshan G J" },
]
keywords = ["mcp", "model-context-protocol", "wandb", "ml", "experiment-tracking", "reinforcement-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.2.0",
    "wandb>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/your-username/experiment-audit-mcp"
Repository = "https://github.com/your-username/experiment-audit-mcp"
Documentation = "https://github.com/your-username/experiment-audit-mcp/blob/main/docs/design-spec-v1.md"
Changelog = "https://github.com/your-username/experiment-audit-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-username/experiment-audit-mcp/issues"

[project.scripts]
experiment-audit-mcp = "experiment_audit_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
